# legal-hub

./: .gitignore  DEPLOYMENT.md  README.md  requirements.txt  server.py
clients/: __init__.py  gemini_client.py
frontend/nextjs/components/Langgraph/: Langgraph.js
mcp-server/: .env.example  AGENT_HANDOFF.md  AIONUI_INTEGRATION.md  CUSTOM-CODE-EXTRACTION.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-QUICK-START.md  DEPLOYMENT.md  DOCKER-DEPLOYMENT.md  DOCKER-INTEGRATION.md  DOCKER-INVESTIGATION-HANDOFF.md  DOCKER_DEPLOYMENT.md  Dockerfile  HANDOFF_REPORT.md  HTTP-MIGRATION-STEPS.md  MIGRATION-PLAN.md  PRODUCTION-DEPLOYMENT.md  QUICK-DEPLOY.md  QUICK-REFERENCE.md  README.md  config.py  deploy.sh  docker-compose.yml  legal-mcp.service  pyproject.toml  requirements-docker.txt  server.py  server.py.backup  setup-server.sh  test-docker.sh  test_stdio.py  working-requirements-frozen.txt
mcp-server/clients/: __init__.py  gemini_client.py  s3_client.py
mcp-server/tests/: __init__.py  conftest.py  test_integration.py
multi_agents/agents/: orchestrator.py  publisher.py
multi_agents/agents/utils/: file_formats.py
